--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_URL=https://eteeapbackend-production.up.railway.app/frontend/api/
+NEXT_PUBLIC_API_URL=https://eteeapbackend-production.up.railway.app/api/
