--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL=https://eteeapbackend-production.up.railway.app/api/
-BACKEND_URL = "https://eteeapbackend-production.up.railway.app";
+NEXT_PUBLIC_API_URL=https://eteeapbackend-production.up.railway.app/api/;
+BACKEND_URL="https://eteeapbackend-production.up.railway.app";
